# astrobmw

./: .gitignore  CMakeLists.txt
core/: CMakeLists.txt
core/include/: astro.hpp
core/include/astro/: constants.hpp  operations.hpp  states.hpp
core/include/astro/constants/: bodies.hpp
core/include/astro/constants/bodies/: earth.hpp
core/include/astro/operations/: orbits.hpp
core/include/astro/operations/orbits/: state_transforms.hpp
core/include/astro/operations/orbits/state_transforms/: cartesian_keplerian.hpp
core/include/astro/states/: orbits.hpp
core/include/astro/states/orbits/: cartesian.hpp  keplerian.hpp
core/include/math/: angle.hpp  vector.hpp
core/src/: cartesian_keplerian.cpp
core/src/astro/states/orbits/: cartesian.cpp  keplerian.cpp
core/tests/cartesian_to_keplerian/: main.cpp
